<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BrainTrainMenu">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView3"
            style="@style/textMiniZagolovok"
            android:text="@string/skill_speed" />

        <Button
            android:id="@+id/words_in_20_seconds_button"
            android:text="@string/words_in_20_seconds"
            style="@style/simpleButton"/>

        <TextView
            android:id="@+id/textView4"
            style="@style/textMiniZagolovok"
            android:text="@string/skill_of_fiction" />

        <Button
            android:id="@+id/category_2_letters_button"
            android:text="@string/category_and_2_letters"
            style="@style/simpleButton"/>

        <TextView
            android:id="@+id/textView5"
            style="@style/textMiniZagolovok"
            android:text="@string/acting_skills" />

        <Button
            android:id="@+id/acting_skills_button"
            android:text="@string/random_character"
            style="@style/simpleButton"/>

        <TextView
            android:id="@+id/textView6"
            style="@style/textMiniZagolovok"
            android:text="@string/Timer" />

        <Button
            android:id="@+id/switching_to_my_timer_button"
            android:text="@string/Timer"
            style="@style/simpleButton"/>

    </LinearLayout>











</androidx.constraintlayout.widget.ConstraintLayout>