<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActingSkills">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:navigationBarColor="@android:color/white"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="118dp">


        <TextView
            android:id="@+id/title1_text_view"
            style="@style/textSredniyZagolovok"
            android:text="@string/acting_skills"/>

        <TextView
            android:id="@+id/ran_char_text_view"
            style="@style/textMiniZagolovok"
            android:text="@string/random_character"/>

        <Button
            android:id="@+id/buttonСharacter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="46dp"
            android:onClick="randCharac"
            android:text="@string/character"
            android:textSize="18sp"/>


              <Button
            android:id="@+id/buttonStart"
            android:layout_width="270dp"
            android:layout_height="wrap_content"
            android:text="@string/Start"
            android:onClick="startToTimer"
            tools:visibility="visible" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>